--- a/templates/output.html
+++ b/templates/output.html
@@ -25,6 +25,8 @@
         <input type="number" name="r10" id="" placeholder='finger5' disabled>
         </div>
         <hr>
+        <label for="accelerometer">accelerometer</label>
+        <input type="number" name="acc" id="accelerometer" placeholder='accelerometer' disabled>
       <div class="row">
           <div class="col">
               <p>Related Word old</p>
