--- a/templates/connect.html
+++ b/templates/connect.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
     {% block body %}
+    {% if site %}
+    <div class='container d-flex flex-column justify-content-center align-items-center'>
+        
+        <h1>connection complete</h1>
+    </div>
+    {% else %}
     <div class='container d-flex flex-column justify-content-center align-items-center'>
         <div class='no-connection-lottie '>
             <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_nTfkVR.json" background="transparent"  speed="1"   loop  autoplay></lottie-player>
@@ -11,5 +17,6 @@
         
         <button class='btn check-connection shadow p-3 mt-5 rounded'>Check Connection</button>
     </div>
+    {% endif %}
     {% endblock body %}
     
